--- a/framework/less/jqueryui.less
+++ b/framework/less/jqueryui.less
@@ -50,7 +50,7 @@
 .ui-widget {
     color: @bodyColor;
     font-family: @bodyFamily;
-    font-size: @bodySize;
+    font-size: 1em;
 }
 .ui-widget-header {
     .clear-area;
@@ -317,6 +317,9 @@
     background: @tooltipColor;
     border: none;
     padding: round(@margin/4,2) round(@margin/3,2) round(@margin/6,2) round(@margin/3,2);
+}
+form .ui-selectmenu-button {
+    width: 100% !important;
 }
 
 
