--- a/framework/less/layouts.less
+++ b/framework/less/layouts.less
@@ -25,16 +25,14 @@ html, body  {
 			min-width: 100%;
 		}
 		&.atk-layout-fluid {
-			height: auto;
+			// height: auto;
+			height: 100%;
 		}
 	}
 	>.atk-layout-column {
 		display: table-cell;
 		min-width: 1px;
 		vertical-align: top;
-		&.atk-layout-fluid {
-			width: auto;
-		}
 	}
 	body>& {
 		table-layout: fixed; /* NOTE Speed up table rendering */
