--- a/playground/css/playground.less
+++ b/playground/css/playground.less
@@ -53,6 +53,6 @@ section {
 	}
 }
 
-#example-widgets-popover .row>.span_4>.atk-box>*[class*=atk-popover] {
+#example-widgets-popover .atk-row>.atk-col-4>.atk-box>*[class*=atk-popover] {
 	position: relative;
 }
