--- a/playground/includes/playground-forms.jade
+++ b/playground/includes/playground-forms.jade
@@ -5,8 +5,8 @@ section#forms
     | Basic&nbsp;
     span.atk-label.atk-effect-info .atk-form
     | &nbsp;with labels aside. No additional classes required.
-  .row.atk-push
-    .span_6.col
+  .atk-row.atk-push
+    .atk-col-6
       .atk-box
         .atk-form
           form
@@ -63,7 +63,7 @@ section#forms
               .atk-cell.atk-actions
                 button.atk-button Okay
                 button.atk-button Cancel
-    .span_6.col
+    .atk-col-6
       .atk-box
         form.atk-cells-group.atk-cells-gutter-large.atk-valign-top
           .atk-cells.atk-push
@@ -95,8 +95,8 @@ section#forms
     | Additional class&nbsp;
     span.atk-label.atk-effect-info .atk-form-compact
     | &nbsp;decreases margins between field rows.
-  .row
-    .span_6.col
+  .atk-row
+    .atk-col-6
       .atk-box
         .atk-form.atk-form-compact
           form
@@ -118,7 +118,7 @@ section#forms
               .atk-cell.atk-actions
                 button.atk-button Okay
                 button.atk-button Cancel
-    .span_6.col
+    .atk-col-6
       .atk-box
         form.atk-cells-group.atk-cells-gutter-large
           .atk-cells.atk-push-small
@@ -147,8 +147,8 @@ section#forms
     | &nbsp;button wrapper and&nbsp;
     span.atk-label.atk-effect-info .atk-cells-gutter
     | &nbsp;classes.
-  .row.atk-push
-    .span_6.col
+  .atk-row.atk-push
+    .atk-col-6
       .atk-box
         .atk-form.atk-form-stacked
           form
@@ -168,7 +168,7 @@ section#forms
             .atk-actions
               button.atk-button Okay
               button.atk-button Cancel
-    .span_6.col 
+    .atk-col-6 
       .atk-box
         form
           .atk-push-xsmall
@@ -190,8 +190,8 @@ section#forms
     | &nbsp;mixed with&nbsp;
     span.atk-label.atk-effect-info .atk-form-compact
     | .
-  .row
-    .span_6.col
+  .atk-row
+    .atk-col-6
       .atk-box
         .atk-form.atk-form-stacked.atk-form-compact
           form
@@ -211,7 +211,7 @@ section#forms
             .atk-actions
               button.atk-button Okay
               button.atk-button Cancel
-    .span_6.col 
+    .atk-col-6 
       .atk-box
         form
           .atk-push-small
@@ -242,7 +242,7 @@ section#forms
     | &nbsp;attribute for inputs and&nbsp;
     span.atk-label.atk-effect-info .atk-jackscrew
     | &nbsp;class for button.
-  .atk-box.span_3
+  .atk-box.atk-col-3
     .atk-form.atk-form-stacked.atk-form-compact
       form
         .atk-form-fieldset
@@ -266,7 +266,7 @@ section#forms
     | &nbsp;classes to&nbsp;
     span.atk-label.atk-effect-info .atk-form-fieldset
     | .
-  .atk-box.span_6
+  .atk-box.atk-col-6
     .atk-form.atk-form-hybrid
       form
         .atk-form-fieldset
@@ -298,12 +298,12 @@ section#forms
     | &nbsp;and&nbsp;
     span.atk-label.atk-effect-info .atk-actions
     | &nbsp;combined with grid system's&nbsp;
-    span.atk-label.atk-effect-info .span_*
+    span.atk-label.atk-effect-info .atk-col-*
     | &nbsp;classes.
   .atk-box
     .atk-form.atk-form-hybrid
-      form.row
-        .atk-form-fieldset.span_6.col
+      form.atk-row
+        .atk-form-fieldset.atk-col-6
           .atk-cells.atk-cells-gutter-large
             .atk-cell
               label
@@ -396,7 +396,7 @@ section#forms
             .atk-cell.atk-jackscrew
               input(type='text')
               p.atk-effect-danger This is a form error.
-        .atk-form-fieldset.atk-form-stacked.span_6.col
+        .atk-form-fieldset.atk-form-stacked.atk-col-6
           .atk-cells
             .atk-cell
               label File Upload:
@@ -481,7 +481,7 @@ section#forms
                   span
                     input(type='radio')
                     label Gooseberry
-        .span_12.col.atk-actions.atk-align-right
+        .atk-col-12.atk-actions.atk-align-right
           hr
           button.atk-button.atk-button-blank Cancel
           button.atk-button.atk-swatch-green Okay
