--- a/playground/includes/playground-gridsystem.jade
+++ b/playground/includes/playground-gridsystem.jade
@@ -4,24 +4,24 @@ section#grid-system
     | Our grid system is based on 
     a(href='http://www.gridpak.com') Gridpak
     |  tool which allows you to add as many columns as needed. It also supports responsiveness.
-  .row.atk-push-small
-    .span_3.col
-      .atk-box-small .col.span_3
-    .span_3.col
-      .atk-box-small .col.span_3
-    .span_3.col
-      .atk-box-small .col.span_3
-    .span_3.col
-      .atk-box-small .col.span_3
-  .row.atk-push-small
-    .span_4.col
-      .atk-box-small .col.span_4
-    .span_4.col
-      .atk-box-small .col.span_4
-    .span_4.col
-      .atk-box-small .col.span_4
-  .row
-    .span_6.col
-      .atk-box-small .col.span_6
-    .span_6.col
-      .atk-box-small .col.span_6
+  .atk-row.atk-push-small
+    .atk-col-3
+      .atk-box-small .atk-col-3
+    .atk-col-3
+      .atk-box-small .atk-col-3
+    .atk-col-3
+      .atk-box-small .atk-col-3
+    .atk-col-3
+      .atk-box-small .atk-col-3
+  .atk-row.atk-push-small
+    .atk-col-4
+      .atk-box-small .atk-col-4
+    .atk-col-4
+      .atk-box-small .atk-col-4
+    .atk-col-4
+      .atk-box-small .atk-col-4
+  .atk-row
+    .atk-col-6
+      .atk-box-small .atk-col-6
+    .atk-col-6
+      .atk-box-small .atk-col-6
