--- a/playground/includes/playground-typography.jade
+++ b/playground/includes/playground-typography.jade
@@ -42,8 +42,8 @@ section#typography
     |  to indicate a block of quoted text.
   .atk-box
     blockquote “Nam quis bibendum erat, ut cursus leo.”
-  .row
-    .span_8.col
+  .atk-row
+    .atk-col-8.col
       h3 Font Scale
       p
         | Font scale classes 
@@ -61,7 +61,7 @@ section#typography
         .atk-size-reset .atk-size-reset
         .atk-size-milli .atk-size-milli
         .atk-size-micro .atk-size-micro
-    .span_4.col
+    .atk-col-4.col
       h3 Headings
       p
         | Headings 
