--- a/playground/includes/playground-widgets.jade
+++ b/playground/includes/playground-widgets.jade
@@ -12,8 +12,8 @@ section#widgets
     span.atk-label.atk-effect-info .atk-cells
     | &nbsp;components.
   #example-widgets-mediablocks.atk-box
-    .row
-      .span_6.col
+    .atk-row
+      .atk-col-6
         .atk-cells.atk-cells-gutter-large.atk-box.atk-swatch-green
           .atk-cell
             img(src='temp/apples.jpg', alt='Apples')
@@ -42,7 +42,7 @@ section#widgets
               a(href='javascript:void(0)')
                 span.icon-trash
                 | &nbsp;Delete
-      .span_6.col
+      .atk-col-6
         .atk-cells.atk-cells-gutter-large.atk-box.atk-swatch-yellow.atk-valign-top
           .atk-cell
             img(src='temp/bananas.jpg', alt='Bananas')
@@ -556,7 +556,7 @@ section#widgets
     | &nbsp;components. The best used as a header on a fixed page.
   .atk-box
     .atk-swatch-ink
-      .atk-move-center.span_8
+      .atk-move-center.atk-col-8
         .atk-bar.atk-cells.atk-cells-gutter.atk-section-small
           .atk-cell
             a.atk-size-kilo(href='javascript:void(0)')
@@ -579,34 +579,34 @@ section#widgets
   p
     span.atk-label.atk-effect-info .atk-popover
   #example-widgets-popover
-    .atk-push.row
-      .span_4.col
+    .atk-push.atk-row
+      .atk-col-4
         .atk-box
           .atk-popover.atk-popover-top-left.atk-box.atk-align-center.atk-size-kilo
             | .atk-popover-top-left
             .atk-popover-arrow
-      .span_4.col
+      .atk-col-4
         .atk-box
           .atk-popover.atk-popover-top-center.atk-box.atk-align-center.atk-size-kilo.atk-swatch-blue
             | .atk-popover-top-center
             .atk-popover-arrow
-      .span_4.col
+      .atk-col-4
         .atk-box
           .atk-popover.atk-popover-top-right.atk-box.atk-align-center.atk-size-kilo.atk-swatch-ink
             | .atk-popover-top-right
             .atk-popover-arrow
-    .row
-      .span_4.col
+    .atk-row
+      .atk-col-4
         .atk-box
           .atk-popover.atk-popover-bottom-left.atk-box.atk-align-center.atk-size-kilo.atk-swatch-yellow
             | .atk-popover-bottom-left
             .atk-popover-arrow
-      .span_4.col
+      .atk-col-4
         .atk-box
           .atk-popover.atk-popover-bottom-center.atk-box.atk-align-center.atk-size-kilo.atk-swatch-red
             | .atk-popover-bottom-center
             .atk-popover-arrow
-      .span_4.col
+      .atk-col-4
         .atk-box
           .atk-popover.atk-popover-bottom-right.atk-box.atk-align-center.atk-size-kilo.atk-swatch-green
             | .atk-popover-bottom-right
