--- a/playground/layouts.jade
+++ b/playground/layouts.jade
@@ -30,8 +30,8 @@ html(class='no-js')
                     span.icon-resize-horizontal
                     | &nbsp;Resize your browser's window to see template's behavior.
                   hr
-                  .row.atk-push
-                    .span_4.col
+                  .atk-row.atk-push
+                    .atk-col-4
                       .atk-box-small.layout-template
                         a.atk-box-small.atk-swatch-gray.atk-push-small(href='layouts/fixed.html')
                           span.atk-box-small.atk-move-center.atk-push-small.atk-swatch-ink(style='width: 150px;')
@@ -39,7 +39,7 @@ html(class='no-js')
                           span.atk-box-small.atk-move-center(style='width: 150px;')
                         .atk-align-center.atk-size-kilo
                           a(href='layouts/fixed.html') Fixed
-                    .span_4.col
+                    .atk-col-4
                       .atk-box-small.layout-template
                         a.atk-box-small.atk-swatch-gray.atk-push-small(href='layouts/fixed-multicol.html')
                           span.atk-box-small.atk-move-center.atk-push-small.atk-swatch-ink(style='width: 150px;')
@@ -51,7 +51,7 @@ html(class='no-js')
                           span.atk-box-small.atk-move-center(style='width: 150px;')
                         .atk-align-center.atk-size-kilo
                           a(href='layouts/fixed-multicol.html') Fixed Multi-Column
-                    .span_4.col
+                    .atk-col-4
                       .atk-box-small.layout-template
                         a.atk-box-small.atk-swatch-gray.atk-push-small(href='layouts/hybrid.html')
                           span.atk-box-small.atk-move-center.atk-push-small.atk-swatch-ink(style='min-width: 150px; max-width: 250px; width: auto;')
@@ -59,8 +59,8 @@ html(class='no-js')
                           span.atk-box-small.atk-move-center(style='min-width: 150px; max-width: 250px;')
                         .atk-align-center.atk-size-kilo
                           a(href='layouts/hybrid.html') Hybrid
-                  .row
-                    .span_4.col
+                  .atk-row
+                    .atk-col-4
                       .atk-box-small.layout-template
                         a.atk-box-small.atk-swatch-gray.atk-push-small(href='layouts/fluid.html')
                           span.atk-box-small.atk-move-center.atk-push-small.atk-swatch-ink
@@ -74,7 +74,7 @@ html(class='no-js')
                           span.atk-box-small.atk-move-center
                         .atk-align-center.atk-size-kilo
                           a(href='layouts/fluid.html') Fluid
-                    .span_4.col
+                    .atk-col-4
                       .atk-box-small.layout-template
                         a.atk-box-small.atk-swatch-gray.atk-push-small(href='layouts/centered.html')
                           span.atk-cells
@@ -82,7 +82,7 @@ html(class='no-js')
                               span.atk-box.atk-inline
                         .atk-align-center.atk-size-kilo
                           a(href='layouts/centered.html') Centered
-                    .span_4.col
+                    .atk-col-4
                       .atk-box-small.layout-template
                         a.atk-box-small.atk-swatch-gray.atk-push-small(href='layouts/responsive.html')
                           span.atk-cells
