--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -2,25 +2,14 @@
 // Layout
 // ==========================================================
 
-
-// @wrapperMinWidth:         800px; // Side paddings are dropped if value is in percentages
-// @wrapperMaxWidth:         1600px; // Put the same value as in @wrapperMinWidth if fixed layout is required
-// @wrapperMargin:           80px; // Margin between site's content and browser's edge
-
-
 // Important: list .createViewport functions in the right order based on @min and @max values otherwise styles get overridden
 .createViewport(
-	@wrapperMargin:   @margin
+	@wrapperMargin: @margin,
+	@colsGutter: @margin,
+	@cols: 12,
+	@viewportMinWidth:769px
 );
-// .createViewport(
-// 	@class: 'desktop',
-// 	@max: 1024px,
-// 	@cols:12,
-// 	@colsGutter: 30px,
-// 	@wrapperMinWidth: 800px,
-// 	@wrapperMaxWidth: 800px,
-// 	@wrapperMargin: 30px
-// );
+
 .createViewport(@class: 'tablet', @viewportMaxWidth:768px, @cols:6, @colsGutter: 30px, @stackLayout:true, @wrapperMargin: 20px);
 .createViewport(@class: 'mobile', @viewportMaxWidth:479px, @cols:3, @colsGutter: 20px,  @stackLayout:true, @wrapperMargin: 20px);
 
@@ -34,6 +23,7 @@
 @bodySize:             0.875rem; // 14px
 @bodyBaseline:         1.618; // Golden Section
 
+@headingCase:          none; // Options: none, capitalize, uppercase, lowercase
 @headingColor:         #000;
 @headingFamily:        "Helvetica Neue", "Helvetica", @jui-ffDefault;
 @headingWeight:		   400;
@@ -66,7 +56,7 @@
 @atk-swatch-red:	   #f9451f;		.createSwatch(atk-swatch-red);
 @atk-swatch-green:     #00cc66;		.createSwatch(atk-swatch-green);
 @atk-swatch-blue:      #0095ff;		.createSwatch(atk-swatch-blue);
-@swatchText:           65%; // Text color sensitivity based on swatch
+@swatchText:           50%; // Text color sensitivity based on swatch
 
 @effectSuccess:        #25c425;
 @effectWarning:        #f7a600;
@@ -98,6 +88,3 @@
 @inputFocus:           @atk-swatch-blue;
 
 @popoverArrow:        12px;
-
-
-// (!) — Need to check if it can be simplified.
